tests/behavior/success/comma.bz
import counting_resource;

function main() -> int32
{
	{
		counting_resource_t(), counting_resource_t(), counting_resource_t();
		let _ = (counting_resource_t(), counting_resource_t(), counting_resource_t());
	}

	return if (counting_resource_is_valid()) { 0 } else { 1 };
}
