tests/behavior/error/int_modulo_by_zero_i64.bz
function main()
{
	let a = 1i64;
	let b = 0i64;
	let _ = a % b;
}
